--- a/game_reviews/core/templates/core/edit_game.html
+++ b/game_reviews/core/templates/core/edit_game.html
@@ -1,14 +1,16 @@
 {% extends "core/base.html" %}
 
 {% block content %}
-  <h1>Edit Game</h1>
-
-  <form method="POST" enctype="multipart/form-data">
+<h1>Edit Game</h1>
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-
-    <button type="submit">Save Changes</button>
-  </form>
-
-  <a href="{% url 'game_detail' game.id %}">Cancel</a>
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">{{ error }}</div>
+        {% endfor %}
+    {% endfor %}
+    <button type="submit" class="btn btn-primary">Save Changes</button>
+    <a href="{% url 'game_detail' game.id %}" class="btn btn-secondary">Cancel</a>
+</form>
 {% endblock %}
