--- a/game_reviews/core/templates/core/game_list.html
+++ b/game_reviews/core/templates/core/game_list.html
@@ -8,15 +8,16 @@
 <ul class="game-list">
     {% for game in games %}
         <li>
-            <a href="{% url 'game_detail' game.id %}">
-                <h2>{{ game.title }}</h2>
-            </a>
-            <p><strong>Genre:</strong> {{ game.genre }}</p>
-            <p><strong>Developer:</strong> {{ game.developer }}</p>
-            <p><strong>Average Rating:</strong> {{ game.average_rating }} / 5</p>
+    <a href="{% url 'game_detail' game.id %}">
+        <h2>{% if game.hidden %}[HIDDEN] {% endif %}{{ game.title }}{% if game.parent_game %}[DLC]{% endif %}</h2>
+    </a>
+    <p><strong>Genre:</strong> {{ game.genre }}</p>
+    <p><strong>Developer:</strong> {{ game.developer }}</p>
+    <p><strong>Average Rating:</strong> {{ game.average_rating }} / 5</p>
         </li>
     {% endfor %}
 </ul>
+
 
 {% if user.is_authenticated and user.role == 'admin' %}
     <a href="{% url 'create_game' %}" class="btn-create">Create New Game</a>
