--- a/game_reviews/core/templates/core/home.html
+++ b/game_reviews/core/templates/core/home.html
@@ -9,7 +9,10 @@
     {% for game in latest_games %}
         <li>
             <a href="{% url 'game_detail' game.id %}">
-                <h2>{{ game.title }}</h2>
+                <h2>
+                    {% if game.hidden %}<span class="badge badge-warning">[HIDDEN]</span> {% endif %}
+                    {{ game.title }} {% if game.parent_game %}[DLC]{% endif %}
+                </h2>
             </a>
             <p><strong>Genre:</strong> {{ game.genre }}</p>
             <p><strong>Developer:</strong> {{ game.developer }}</p>
