--- a/game_reviews/static/core/styles.css
+++ b/game_reviews/static/core/styles.css
@@ -193,3 +193,67 @@ button[type="submit"]:hover, .btn-primary:hover {
     padding: 0; /* Removes unnecessary padding */
     width: auto;
 }
+.search-form {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.search-form input[type="text"] {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.sorting {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 10px;
+}
+
+.sorting .btn {
+    background-color: #f4f4f4;
+    border: 1px solid #ddd;
+    color: #007bff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.sorting .btn-primary {
+    background-color: #007bff;
+    color: #fff;
+    font-weight: bold;
+}
+
+.sorting .btn:hover {
+    background-color: #0056b3;
+    color: #fff;
+}
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+    gap: 10px;
+}
+
+.pagination a, .pagination span {
+    padding: 10px 15px;
+    border: 1px solid #ddd;
+    color: #007bff;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.pagination a:hover {
+    background-color: #007bff;
+    color: white;
+}
+
+.pagination span {
+    background-color: #f8f9fa;
+    font-weight: bold;
+    cursor: default;
+}
